// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnRotation snapshots should render ColumnRotation 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light"
    data-test-section=""
  >
    <div
      class="SectionColumn__labels SectionColumn__labels--light"
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumn__label SectionColumn__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Rotation
      </small>
    </div>
    <div
      class="SectionColumn__wrapper SectionColumn__wrapper--light"
    >
      <div
        class="SectionColumn__content SectionColumn__content--light SectionColumn__content--twoInputs SectionColumn__content--twoInputs--light"
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField TextField--light TextField--fullWidth TextField--fullWidth--light"
          data-test-text-field="angle"
        >
          <div
            class="ScrubbableInput ScrubbableInput--light"
            data-test-scrubbable-input="angle"
          >
            <div
              class="css-1jnxvbp ScrubbableInput__icon ScrubbableInput__icon--light Icon Icon--light Icon--neutral2 Icon--neutral2--light"
              data-test-icon="protractor"
              height="16"
              name="Protractor"
              width="16"
            />
          </div>
          <input
            class="TextField__input TextField__input--light"
            data-test-text-field-input="angle"
            maxlength="6"
            type="number"
            value="0"
          />
        </div>
        <div
          class="css-1jnxvbp ButtonGroup ButtonGroup--light ButtonGroup--fullWidth ButtonGroup--fullWidth--light"
          data-test-button-group="layout-position"
        >
          <div
            class="ButtonGroup__button ButtonGroup__button--light"
            data-test-button-group-input="toggle-rotate"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon ButtonGroup__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="toggle-rotate"
              height="12"
              name="ToggleRotate"
              width="12"
            />
          </div>
          <div
            class="ButtonGroup__button ButtonGroup__button--light"
            data-test-button-group-input="flip-horizontal"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon ButtonGroup__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flip-horizontal"
              height="12"
              name="FlipHorizontal"
              width="12"
            />
          </div>
          <div
            class="ButtonGroup__button ButtonGroup__button--light"
            data-test-button-group-input="flip-vertical"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon ButtonGroup__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flip-vertical"
              height="12"
              name="FlipVertical"
              width="12"
            />
          </div>
        </div>
      </div>
      <div
        class="SectionColumn__buttons SectionColumn__buttons--light"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnRotation snapshots should render when values are mixed 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light"
    data-test-section=""
  >
    <div
      class="SectionColumn__labels SectionColumn__labels--light"
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumn__label SectionColumn__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Rotation
      </small>
    </div>
    <div
      class="SectionColumn__wrapper SectionColumn__wrapper--light"
    >
      <div
        class="SectionColumn__content SectionColumn__content--light SectionColumn__content--twoInputs SectionColumn__content--twoInputs--light"
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField TextField--light TextField--fullWidth TextField--fullWidth--light"
          data-test-text-field="angle"
        >
          <div
            class="ScrubbableInput ScrubbableInput--light"
            data-test-scrubbable-input="angle"
          >
            <div
              class="css-1jnxvbp ScrubbableInput__icon ScrubbableInput__icon--light Icon Icon--light Icon--neutral2 Icon--neutral2--light"
              data-test-icon="protractor"
              height="16"
              name="Protractor"
              width="16"
            />
          </div>
          <input
            class="TextField__input TextField__input--light"
            data-test-text-field-input="angle"
            maxlength="6"
            type="text"
            value="Mixed"
          />
        </div>
        <div
          class="css-1jnxvbp ButtonGroup ButtonGroup--light ButtonGroup--fullWidth ButtonGroup--fullWidth--light"
          data-test-button-group="layout-position"
        >
          <div
            class="ButtonGroup__button ButtonGroup__button--light"
            data-test-button-group-input="toggle-rotate"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon ButtonGroup__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="toggle-rotate"
              height="12"
              name="ToggleRotate"
              width="12"
            />
          </div>
          <div
            class="ButtonGroup__button ButtonGroup__button--light"
            data-test-button-group-input="flip-horizontal"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon ButtonGroup__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flip-horizontal"
              height="12"
              name="FlipHorizontal"
              width="12"
            />
          </div>
          <div
            class="ButtonGroup__button ButtonGroup__button--light"
            data-test-button-group-input="flip-vertical"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon ButtonGroup__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flip-vertical"
              height="12"
              name="FlipVertical"
              width="12"
            />
          </div>
        </div>
      </div>
      <div
        class="SectionColumn__buttons SectionColumn__buttons--light"
      />
    </div>
  </div>
</DocumentFragment>
`;
